--- a/src/scss/components/_masonry.scss
+++ b/src/scss/components/_masonry.scss
@@ -1,12 +1,12 @@
 .masonry {
   display: grid;
   margin-inline: auto;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   @include mqTablet600() {
     grid-template-columns:
       repeat(3, 1fr);
     grid-template-rows:
-      repeat(4, minmax(200px, 1fr));
+      repeat(4, minmax(300px, 1fr));
   }
 
   grid-gap: 1.5rem;
